k8s/0020.service.yml
apiVersion: v1
kind: Service
metadata:
  name: flure-landing
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: flure-landing
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
